xong Tong quan Admin

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -37,35 +37,61 @@
         <!-- Tổng quan -->
         <section id="overview" class="page active">
             <div class="cards">
-                <div class="card blue">
+                <div class="card hocsinh">
                     <h3>Tổng học sinh</h3>
+                    <img src="..\img\hocsinh.png" alt="anh">
                     <p class="number">1247</p>
                     <span>+12 so với tháng trước</span>
                 </div>
-                <div class="card green">
+                <div class="card giaovien">
                     <h3>Giáo viên</h3>
+                    <img src="..\img\giaovien.png" alt="anh">
                     <p class="number">54</p>
                     <span>+2 so với tháng trước</span>
                 </div>
-                <div class="card purple">
+                <div class="card lophoc">
                     <h3>Lớp học</h3>
+                    <img src="..\img\lophoc.png" alt="anh">
                     <p class="number">32</p>
                     <span>Không thay đổi</span>
                 </div>
-                <div class="card orange">
+                <div class="card chuyencan">
+                    <img src="..\img\chuyencan.png" alt="anh">
                     <h3>Chuyên cần hôm nay</h3>
                     <p class="number">1185</p>
                     <span>95.2% có mặt</span>
                 </div>
             </div>
 
-            <div class="recent">
-                <h3>Hoạt động gần đây</h3>
-                <ul>
-                    <li>Lớp 3A có 3 học sinh vắng mặt</li>
-                    <li>GV Nguyễn Thị B đã cập nhật điểm lớp 5C</li>
-                    <li>Thêm mới học sinh Trần Văn D vào lớp 1B</li>
-                </ul>
+            <div class="recent-activity">
+                <div class="recent-header">
+                    <h2>Hoạt động gần đây</h2>
+                    <h5>Các sự kiện và thông báo mới nhất</h5>
+                </div>
+
+                <div class="activity-item">
+                    <div class="activity-info">
+                        <p>Lớp 3A có 3 học sinh vắng mặt</p>
+                        <span>10 phút trước</span>
+                    </div>
+                    <button class="tag tag-gray">Chuyên cần</button>
+                </div>
+
+                <div class="activity-item">
+                    <div class="activity-info">
+                        <p>Giáo viên Nguyễn Thị B đã cập nhật điểm lớp 5C</p>
+                        <span>30 phút trước</span>
+                    </div>
+                    <button class="tag tag-outline">Học tập</button>
+                </div>
+
+                <div class="activity-item">
+                    <div class="activity-info">
+                        <p>Thêm mới học sinh Trần Văn D vào lớp 1B</p>
+                        <span>1 giờ trước</span>
+                    </div>
+                    <button class="tag tag-black">Học sinh</button>
+                </div>
             </div>
         </section>
 
