xu ly button dang xuat

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -21,7 +21,8 @@
             <i class="fa-solid fa-school"></i>
             <span>Hệ thống quản lý trường tiểu học</span>
         </div>
-        <button class="logout-btn"><i class="fa-solid fa-arrow-right-from-bracket"></i>Đăng xuất</button>
+        <button class="logout-btn"><i class="fa-solid fa-arrow-right-from-bracket"></i><a
+                href="..\XacThuc\dangnhap.html">Đăng xuất</a></button>
     </header>
 
     <nav class="menu">
