--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -76,19 +76,19 @@
                 <h3 style="display: flex;justify-content: space-between;margin-right: 10px;"><span>6A</span><span style="background-color: black;color:white;border-radius: 15px;padding: 5px;">Chủ nhiệm</span></h3>
                 <p style="color: gray;">TMôn: Toán</p>
                 <p style="color: gray;">Sĩ số 32</p>
-                <h4><button>Điểm danh</button><button>Nhập điểm</button></h4>
+                <h4><button class="btnDiemdanh">Điểm danh</button><button class="btnNhapDiem">Nhập điểm</button></h4>
             </div>
             <div class="LOP"id="Lop2">
                 <h3>6B</h3>
                 <p style="color: gray;">TMôn: Toán</p>
                 <p style="color: gray;">Sĩ số 32</p>
-                <h4><button>Điểm danh</button><button>Nhập điểm</button></h4>
+                <h4><button class="btnDiemdanh">Điểm danh</button><button class="btnNhapDiem">Nhập điểm</button></h4>
             </div>
             <div class="LOP"id="Lop3">
                 <h3>7A</h3>
                 <p style="color: gray;">TMôn: Toán</p>
                 <p style="color: gray;">Sĩ số 32</p>
-                <h4><button>Điểm danh</button><button>Nhập điểm</button></h4>
+                <h4><button class="btnDiemdanh">Điểm danh</button><button class="btnNhapDiem">Nhập điểm</button></h4>
             </div>
         </div>
         <div id="HoatDong">
@@ -118,13 +118,13 @@
         </div>
     </div>
 <!-----------------Diem Danh------------------->
-    <div id="DieDanh"></div>
+    <div id="DieDanh" style="display: block;"></div>
 
-    <div id="SucKhoe"></div>
+    <div id="SucKhoe" style="display: block;"></div>
 
-    <div id="DiemSo"></div>
+    <div id="DiemSo" style="display: block;"></div>
 
-    <div id="LienLac"></div>
+    <div id="LienLac" style="display: block;"></div>
 
     <script src="jvGV.js"></script>
 </body>
