--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -197,10 +197,145 @@
 
         <!-- Các section khác -->
         <section id="class" class="page">
-            <h3>Quản lý lớp học (đang cập nhật)</h3>
+            <div class="class-header">
+                <h3>Quản lý lớp học</h3>
+                <span>Tạo lớp, cập nhật thông tin và gán giáo viên chủ nhiệm</span>
+                <div class="class-actions">
+                    <img src="..\img\hocsinh.png" alt="">
+                    <h4>Tổng: 3 lớp</h4>
+                    <img src="..\img\giaovien.png" alt="">
+                    <h4>Học sinh: 90</h4>
+                    <button class="addclass-btn"><i class="fa-solid fa-plus"></i>Tạo lớp mới</button>
+                </div>
+            </div>
+            <table class="class-table">
+                <thead>
+                    <tr>
+                        <th>Tên lớp</th>
+                        <th>Khối</th>
+                        <th>GVCN</th>
+                        <th>Sĩ số</th>
+                        <th>Phòng học</th>
+                        <th>Trạng thái</th>
+                        <th>Thao tác</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1A</td>
+                        <td>Khối 1</td>
+                        <td>Nguyễn Thị B</td>
+                        <td>38</td>
+                        <td>A101</td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>1B</td>
+                        <td>Khối 1</td>
+                        <td>Nguyễn Thu H</td>
+                        <td>39</td>
+                        <td>A102</td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>1C</td>
+                        <td>Khối 1</td>
+                        <td>Phạm T</td>
+                        <td>32</td>
+                        <td>A103</td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2E</td>
+                        <td>Khối 2</td>
+                        <td>Trần Thị P</td>
+                        <td>41</td>
+                        <td>B101</td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section id="teacher" class="page">
-            <h3>Quản lý giáo viên (đang cập nhật)</h3>
+            <div class="class-header">
+                <h3>Quản lý giáo viên</h3>
+                <span>TThêm, sửa, xóa giáo viên và phân công lớp</span>
+                <div class="class-actions">
+                    <img src="..\img\hocsinh.png" alt="">
+                    <h4>Tổng: 3 giáo viên</h4>
+                    <button class="addteacher-btn"><i class="fa-solid fa-plus"></i>Thêm giáo viên</button>
+                </div>
+            </div>
+            <table class="class-table">
+                <thead>
+                    <tr>
+                        <th>Họ tên</th>
+                        <th>Email</th>
+                        <th>Số điện thoại</th>
+                        <th>Môn dạy</th>
+                        <th>Lớp dạy</th>
+                        <th>Chủ nhiệm</th>
+                        <th>Trạng thái</th>
+                        <th>Thao tác</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nguyễn Thị Lan</td>
+                        <td>lan.nguyen@school.edu.vn</td>
+                        <td>0987654321</td>
+                        <td>Toán</td>
+                        <td><span class="status activeclass1">1A</span> <span class="status activeclass1">1B</span></td>
+                        <td><span class="status activeclass">1A</span></td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Trần Thị M</td>
+                        <td>mtran@school.edu.vn</td>
+                        <td>0369852147</td>
+                        <td>Văn</td>
+                        <td>
+                            <span class="status activeclass1">1A</span>
+                            <span class="status activeclass1">1B</span>
+                        </td>
+                        <td><span class="status activeclass">1B</span></td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Đào Thị B</td>
+                        <td>bdao@school.edu.vn</td>
+                        <td>0123456789</td>
+                        <td>Anh</td>
+                        <td><span class="status activeclass1">2A</span></td>
+                        <td><span class="status activeclass">2A</span></td>
+                        <td><span class="status activeclass">Hoạt động</span></td>
+                        <td class="actions">
+                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section id="event" class="page">
             <h3>Quản lý sự kiện (đang cập nhật)</h3>
