update nhan xet gv

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -74,6 +74,12 @@
             <li><span class="dot purple"></span> Cập nhật phiếu điểm tháng 12 <br><small>3 ngày trước</small></li>
         </ul>
     </div>
+    <!-- Nhận xét giáo viên -->
+    <div class="Nhanxetgv">   
+        <h3>Nhận xét từ giáo viên</h3>    
+        <p>Cập nhật phiếu điểm tháng 12 </p><br>
+        <small>3 ngày trước</small>
+    </div>
 </section>
  <script src="main.js"></script>
 </body>
